--- a/private_dot_config/input-remapper-2/private_config.json
+++ b/private_dot_config/input-remapper-2/private_config.json
@@ -1,6 +1,7 @@
 {
     "version": "2.0.1",
     "autoload": {
-        "Logitech M705": "default"
+        "Logitech M705": "default",
+        "Logitech USB Laser Mouse": "default"
     }
 }
